Fixed whitespace issue of tree diagram

--- a/styles.css
+++ b/styles.css
@@ -54,12 +54,12 @@ body {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 35px;
     margin-bottom: 30px;
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 27px;
     margin-bottom: 30px;
 }
 
@@ -117,11 +117,12 @@ button:hover {
 }
 
 #contact {
-    font-size: 14px;
-    text-align: center;
-    position: absolute;
+    font-size: 12px;
+    margin-top: 0px;
+    text-align: right;
+    position: relative;
     right: 10px;
-    bottom: 0px;
+    bottom: 10px;
 }
 
 .flex-row {
@@ -129,4 +130,8 @@ button:hover {
     flex-direction: row;
     justify-content: center;
     gap: 4px;
+}
+
+#tree-diagram {
+    white-space: pre;
 }
